crates/abp-workspace/tests/snapshots/snapshots_test__workspace_spec_pass_through.snap
---
source: crates/abp-workspace/tests/snapshots_test.rs
expression: spec
---
{
  "root": "/home/user/project",
  "mode": "pass_through",
  "include": [],
  "exclude": []
}
