crates/abp-workspace/tests/snapshots/snapshots_test__workspace_spec_staged.snap
---
source: crates/abp-workspace/tests/snapshots_test.rs
expression: spec
---
{
  "root": "/tmp/workspace",
  "mode": "staged",
  "include": [],
  "exclude": []
}
