crates/abp-workspace/tests/snapshots/snapshots_test__workspace_spec_with_globs.snap
---
source: crates/abp-workspace/tests/snapshots_test.rs
expression: spec
---
{
  "root": "/home/user/project",
  "mode": "staged",
  "include": [
    "src/**",
    "Cargo.toml"
  ],
  "exclude": [
    "target/**",
    "*.log",
    ".git/**"
  ]
}
